src/test/test-models/good/parser-generator/double-trunc.stan
parameters {
  real y;
}
model {
  y ~ normal(0, 1) T[-1, 1];
}
