src/test/test-models/bad/conditional_condition_bad_1.stan
parameters {
  real y;
}
model {
  vector[3] x;
  if (x)                   // ERROR HERE
    y ~ normal(0,1);
}
